--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ websockets = "^14.1"
 rmediator = "^0.2.3"
 sqlalchemy = "^2.0.36"
 psycopg2 = "^2.9.10"
+ed-domain-model = "^0.0.3"
+resend = "^2.5.1"
+python-dotenv = "^1.0.1"
+pymongo = "^4.10.1"
 
 
 [tool.poetry.group.test.dependencies]
