--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "py"
+name = "ed-notification"
 version = "0.1.0"
 description = ""
 authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
@@ -18,6 +18,10 @@ ed-domain-model = "^0.0.3"
 resend = "^2.5.1"
 python-dotenv = "^1.0.1"
 pymongo = "^4.10.1"
+ed-domain = "^0.2.12"
+ed-infrastructure = "^0.1.4"
+jsons = "^1.6.3"
+twine = "^6.1.0"
 
 
 [tool.poetry.group.test.dependencies]
@@ -30,6 +34,9 @@ isort = "^5.13.2"
 black = "^24.10.0"
 ruff = "^0.8.2"
 
+[tool.poetry.requires-plugins]
+poetry-plugin-export = ">=1.8"
+
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=46.4.0", "wheel"]
+build-backend = "setuptools.build_meta"
