Fix dependency issues

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ ed-domain-model = "^0.0.3"
 resend = "^2.5.1"
 python-dotenv = "^1.0.1"
 pymongo = "^4.10.1"
-ed-domain = "^0.2.12"
-ed-infrastructure = "^0.1.4"
+ed-domain = "^0.2.21"
+ed-infrastructure = "0.1.9"
 jsons = "^1.6.3"
 twine = "^6.1.0"
 
