--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "ed-notification"
-version = "0.1.2"
+version = "0.1.4"
 description = ""
 authors = ["ffekirnew <ffekirnew0808@gmail.com>"]
 license = "MIT"
@@ -32,6 +32,7 @@ pytest = "^8.3.3"
 isort = "^5.13.2"
 black = "^24.10.0"
 ruff = "^0.8.2"
+mypy = "^1.15.0"
 
 [tool.poetry.requires-plugins]
 poetry-plugin-export = ">=1.8"
