--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,16 +12,17 @@ pika = "^1.3.2"
 fastapi = {extras = ["standard"], version = "^0.115.5"}
 websockets = "^14.1"
 rmediator = "^0.2.7"
-sqlalchemy = "^2.0.36"
+sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
 psycopg2 = "^2.9.10"
 resend = "^2.5.1"
 python-dotenv = "^1.0.1"
 pymongo = "^4.10.1"
-ed-domain = "^0.3.25"
-ed-infrastructure = "0.2.7"
+ed-domain = "^0.3.35"
+ed-infrastructure = "^0.3.1"
 jsons = "^1.6.3"
 twine = "^6.1.0"
 faststream = {extras = ["rabbit"], version = "^0.5.42"}
+psycopg = "^3.2.9"
 
 
 [tool.poetry.group.test.dependencies]
