--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ colorama==0.4.6 ; python_version >= "3.12" and python_version < "4.0" and (platf
 cryptography==45.0.3 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "linux"
 dnspython==2.7.0 ; python_version >= "3.12" and python_version < "4.0"
 docutils==0.21.2 ; python_version >= "3.12" and python_version < "4.0"
-ed-domain==0.3.25 ; python_version >= "3.12" and python_version < "4.0"
-ed-infrastructure==0.2.7 ; python_version >= "3.12" and python_version < "4.0"
+ed-domain==0.3.35 ; python_version >= "3.12" and python_version < "4.0"
+ed-infrastructure==0.3.1 ; python_version >= "3.12" and python_version < "4.0"
 email-validator==2.2.0 ; python_version >= "3.12" and python_version < "4.0"
 exceptiongroup==1.3.0 ; python_version >= "3.12" and python_version < "4.0"
 fast-depends==2.4.12 ; python_version >= "3.12" and python_version < "4.0"
@@ -43,6 +43,7 @@ pamqp==3.3.0 ; python_version >= "3.12" and python_version < "4.0"
 pika==1.3.2 ; python_version >= "3.12" and python_version < "4.0"
 propcache==0.3.1 ; python_version >= "3.12" and python_version < "4.0"
 psycopg2==2.9.10 ; python_version >= "3.12" and python_version < "4.0"
+psycopg==3.2.9 ; python_version >= "3.12" and python_version < "4.0"
 pycparser==2.22 ; python_version >= "3.12" and python_version < "4.0" and platform_machine != "ppc64le" and platform_machine != "s390x" and sys_platform == "linux" and platform_python_implementation != "PyPy"
 pydantic-core==2.33.2 ; python_version >= "3.12" and python_version < "4.0"
 pydantic==2.11.5 ; python_version >= "3.12" and python_version < "4.0"
@@ -70,6 +71,7 @@ typer==0.16.0 ; python_version >= "3.12" and python_version < "4.0"
 typing-extensions==4.13.2 ; python_version >= "3.12" and python_version < "4.0"
 typing-inspection==0.4.1 ; python_version >= "3.12" and python_version < "4.0"
 typish==1.9.3 ; python_version >= "3.12" and python_version < "4.0"
+tzdata==2025.2 ; python_version >= "3.12" and python_version < "4.0" and sys_platform == "win32"
 urllib3==2.4.0 ; python_version >= "3.12" and python_version < "4.0"
 uvicorn==0.34.2 ; python_version >= "3.12" and python_version < "4.0"
 uvloop==0.21.0 ; python_version >= "3.12" and python_version < "4.0" and sys_platform != "win32" and sys_platform != "cygwin" and platform_python_implementation != "PyPy"
